<resources>
    <string name="app_name">Record Ratings</string>
    <string name="main_add_button">Rate a Record</string>
    <string name="add_record">Rate This Record</string>
    <string name="add_rec">Add Record</string>
    <string name="submit_edit">Submit Edit</string>
    <string name="main_delete_button">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_record_title">Add Record</string>
    <string name="add_record_album">Album Name</string>
    <string name="add_record_artist">Artist</string>
    <string name="add_record_rating">Rating</string>
    <string name="add_record_genre">Genre</string>
    <string name="add_record_desc">Description</string>
    <string name="add_record_photo">Album Cover (Optional)</string>
    <string name="add_record_browse">Browse Gallery</string>
    <string name="main_add_db">Add to DB</string>
    <string name="search">Search</string>
    <string name="record_page_album">Album</string>
    <string name="record_page_artist">Artist</string>
    <string name="toolbar_filter">Filter Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_items_in_rv">You have not rated any records yet.  Go to Add Record on the menu to get started!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">No Account Yet?  <u>Sign Up Here</u></string>
    <string name="forgot_pw">Forgot Your Password? <u>Click Here</u></string>
    <string name="login">Log In</string>
    <string name="forgotpw">Forgot Password</string>
    <string name="display">Display Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="profile_pic">Select Profile Picture</string>
    <string name="menu_sub">Welcome back,</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add a Comment...</string>
    <string name="total_comments">Total Comments: </string>
    <string name="dialog_message">Edit Profile</string>
    <string name="dialog_title">Edit Stuff</string>
    <string name="edit_profile_pic">Change Profile Picture</string>
    <string name="edit_bio">Edit Your Bio...</string>
    <string name="edit_apply">Apply</string>
    <string name="edit_cancel">Cancel</string>
    <string name="check_email_header">Enter Your Email Address for a Validation Message</string>
    <string name="report">Report an Account</string>
    <string name="report_spinner_head">Select a Reason why you are Reporting this Account: </string>
    <string name="report_user">Enter Display Name Here...</string>
    <string name="report_submit">Report User</string>
    <string name="feedback">Send us Feedback!</string>
    <string name="feedback_long">What do you like about this app?  What needs to be implemented or improved?  Let us know down below!"</string>
    <string name="my_records">My Records</string>
    <string name="thanks">Thank you for downloading Record It!</string>
    <string name="enjoy">Enjoy the App?  Give us a 5-star rating in the play store!</string>
    <string name="rate">Rate the App</string>
    <string name="user">User</string>
    <string name="admin_del">admin_del_record</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="close_app">Close App</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
