<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <TextView
        android:id="@+id/check_email_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="?attr/textcolor"
        android:text="@string/check_email_header"
        android:layout_gravity="start"
        android:layout_marginTop="10pt"
        android:layout_marginStart="15pt"
        android:layout_marginEnd="15pt"/>

    <EditText
        android:id="@+id/check_for_valid_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="18sp"
        android:layout_marginTop="15pt"
        android:layout_marginStart="15pt"
        android:layout_marginEnd="15pt"
        android:layout_gravity="center"
        android:textColor="?attr/textcolor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:background="?attr/backgroundcolor"
        android:layout_marginTop="25pt"
        android:layout_marginBottom="10pt"
        android:layout_marginEnd="5pt"
        android:orientation="horizontal">

        <Button
            android:layout_marginEnd="5pt"
            android:id="@+id/edit_apply"
            android:textSize="18sp"
            android:text="@string/edit_apply"
            android:gravity="center"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginEnd="5pt"
            android:text="@string/edit_cancel"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>