<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedback_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor">

    <TextView
        android:id="@+id/pop_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15pt"
        android:gravity="center"
        android:textColor="?attr/textcolor"
        android:text="@string/report"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/report_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"
        android:layout_marginEnd="15pt"
        android:layout_marginStart="15pt"
        android:gravity="center"
        android:textColor="?attr/textcolor"
        android:hint="@string/report_user"/>


    <TextView
        android:id="@+id/pop_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"
        android:layout_marginEnd="15pt"
        android:layout_marginStart="15pt"
        android:gravity="start"
        android:textColor="?attr/textcolor"
        android:text="@string/report_spinner_head"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/report_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:layout_marginStart="13pt"
        android:layout_marginEnd="13pt"
        android:textColor="@color/colorBlack"
        android:background="@android:drawable/btn_dropdown"/>

    <Button
        android:id="@+id/report_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_submit"
        android:layout_gravity="center"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="15pt"
        android:layout_marginBottom="15pt"
        android:background="@color/colorGreenBack"
        android:textColor="@color/colorWhite"/>

</LinearLayout>